# Z2-phi4

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  Readme.md  do_cmake.sh  do_cmake_host.sh
.github/workflows/: cmake.yml
Ranalysis/: E2_0.Rmd  diff_mesuraments.R  process_output.R
Rplot/: Rread_block.R  Shiny.Rmd  Spectrum_msq0_-4.925_msq1_-4.85.Rmd  ggplot.R  ggplot.Rmd  paper_data.txt  plot_routines.R  print_error.R  server.R  ui.R
cmake/: CheckGit.cmake  LICENSE.txt
doc/: Shiny.Rmd  ggplot.R  ggplot.Rmd  ggplot.html  phi4.tex  test_4pt_BH.Rmd
example_script/: do_cmake_laptop.sh  do_cmake_m100.sh  do_cmake_qbig_kepler.sh  do_cmake_qbig_pascal.sh  example.in  scr.sh  scr_qbig_pascal.sh
include/: CMakeLists.txt  DFT.hpp  IO_params.hpp  geometry.hpp  lattice.hpp  measurements.hpp  metropolis.hpp  mutils.hpp  rand.hpp  random.hpp  updates.hpp  utils.hpp  write_viewer.hpp
main/: CMakeLists.txt  binning_contraction.cpp  conf_bin2asci.cpp  contraction.cpp  main.cpp  merging_replicas.cpp  prove.cpp
modules/: DFT.cpp  Langevin3rd.cpp  cluster.cpp  endian.cpp  measurements.cpp  metropolis.cpp  mutils.cpp  rand.cpp  ranlxd.cpp  utils.cpp  write_viewer.cpp
modules/geometry/: hopping.cpp  lex2c.cpp
test/: diff_mesuraments.R  infile.in  infile_conf.in  infile_confFT.in  read_header.R  test.sh
test/data/: G2t_T8_L4_msq0-4.900000_msq1-4.900000_l02.500000_l12.500000_mu5.000000_g0.000000_rep0_reference  T8_L4_msq0-4.900000_msq1-4.900000_l02.500000_l12.500000_mu5.000000_g0.000000_rep0_conf1  T8_L4_msq0-4.900000_msq1-4.900000_l02.500000_l12.500000_mu5.000000_g0.000000_rep0_conf2  T8_L4_msq0-4.900000_msq1-4.900000_l02.500000_l12.500000_mu5.000000_g0.000000_rep0_conf3  checks_T8_L4_msq0-4.900000_msq1-4.900000_l02.500000_l12.500000_mu5.000000_g0.000000_rep0_reference
